# adventofcode

./: .gitignore  README.md  pyproject.toml
2015/day 04/: part 1.py  part 2.py
2015/day 14/: part 1.py  part 2.py
2018/day 05/: part 1.py  part 2.py
2021/day 06/: part 1.py  part 2.py
2021/day 12/: part 1.py  part 2.py
2022/day 01/: part 1.py  part 2.py
2022/day 02/: part 1.py  part 2.py
2022/day 03/: part 1.py  part 2.py
2022/day 04/: part 1.py  part 2.py
2022/day 05/: part 1.py  part 2.py
2022/day 06/: part 1.py  part 2.py
2022/day 07/: part 1.py  part 2.py
2024/day 01/: part 1.py  part 2.py
2024/day 02/: part 1.py  part 2.py
2024/day 03/: part 1.py  part 2.py
2024/day 04/: part 1.py  part 2.py
2024/day 05/: part 1.py  part 2.py
2024/day 06/: part 1.py  part 2.py
2024/day 07/: part 1.py  part 2.py
2024/day 08/: part 1.py  part 2.py
2024/day 09/: part 1.py  part 2.py
2024/day 10/: part 1.py  part 2.py
2024/day 11/: part 1.py  part 2.py
2024/day 12/: part 1.py  part 2.py
2024/day 13/: part 1.py  part 2.py
2024/day 14/: part 1.py  part 2.py
2024/day 15/: part 1.py  part 2.py
2024/day 16/: part 1.py  part 2.py
2024/day 17/: part 1.py
2024/day 18/: part 1.py  part 2.py
2024/day 21/: part 1.py
2024/day 22/: part 1.py  part 2.py
2024/day 24/: part 1.py
2025/day 01/: part 1.py  part 2.py
2025/day 02/: part 1.py  part 2.py
2025/day 03/: part 1.py  part 2.py
utils/: new day.py  pyproject.toml
utils/src/utils/: api.py  new_day.py
