[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cyrus Yip", email = "cyrusyip@cyrusyip.com" }
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
]

[project.scripts]
utils = "utils:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
