[project]
name = "utils"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Cyrus Yip", email = "cyrusyip@cyrusyip.com" }
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
]

[project.scripts]
new = "utils.new_day:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
